--- a/Vosse.WPF/App.xaml
+++ b/Vosse.WPF/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Vousse.WPF.App"
+﻿<Application x:Class="Vosse.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Vousse.WPF"
+             xmlns:local="clr-namespace:Vosse.WPF"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
