#17 #26 Connexion avec l'API réussie grâce à API Swagger Améliorations de l'API et de l'interface utilisateur
- Simplification de la gestion des spectacles enfants dans `SpectacleService.cs`.
- Ajout d'un `TextBlock` pour afficher les résultats dans `MainWindow.xaml`.
- Intégration d'un client API dans `MainWindow.xaml.cs` pour charger des données CSV et vérifier l'existence de billets.
- Mise à jour de `Vousse.WPF.csproj` pour inclure des références à des packages NuGet et à d'autres projets.
- Ajout d'un fichier `appsettings.json` pour centraliser la configuration de l'API.
- Création d'un client API dans `endpoints_suite.cs` pour gérer les appels API.
- Mise à jour de `ConnectedService.json` pour refléter les paramètres de connexion à l'API.
- Génération automatique des fichiers `endpoints.cs` et `endpoints.nswag` pour définir les méthodes d'API.
- Mise à jour de `endpoints.nswag.json` pour inclure des définitions OpenAPI.

--- a/Vousse.WPF/MainWindow.xaml
+++ b/Vousse.WPF/MainWindow.xaml
@@ -9,5 +9,7 @@
     <Grid>
         <DataGrid x:Name="CsvDataGrid" Margin="134,72,103,73" />
         <Button Content="importer le csv" Margin="376,18,314,367" Click="importSpectacle"/>
+        <TextBlock Name="txtResultat" Width="200" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,382,0,0" TextAlignment="Center" FontWeight="Bold"/>
+
     </Grid>
 </Window>
