#17 #27 Refactorisation des classes et ajout de nouvelles fonctionnalités
- Suppression de la classe `Class1`.
- Ajout de la propriété `Prix` dans `Billeterie` et réorganisation des propriétés.
- Suppression des collections `BilleterieNew` et `Billeteries` dans `SpectacleParent`.
- Mise à jour de `VousseContext` pour configurer la connexion à la base de données et ajustements des clés primaires.
- Ajout de la propriété `prix` dans `Billeterie_DTO`.
- Introduction de la méthode `DetecterChevauchements` dans `ISpectacleService` et `SpectacleService`.
- Changement de couleur de la `ProgressBar` dans `MainWindow.xaml`.
- Suppression du projet `Vosse.WPF` dans le fichier de solution.
- Ajout des classes `chevauchements_DTO` et `Spectacleschevauches_DTO` pour gérer les chevauchements de spectacles.

--- a/Vousse.WPF/MainWindow.xaml
+++ b/Vousse.WPF/MainWindow.xaml
@@ -38,7 +38,7 @@
             </TabItem>
         </TabControl>
         <!-- ProgressBar pour afficher la progression de l'importation -->
-        <ProgressBar x:Name="progressBar" Margin="234,749,469,93" IsIndeterminate="True" Grid.Column="1" Foreground="Blue"/>
+        <ProgressBar x:Name="progressBar" Margin="234,749,469,93" IsIndeterminate="True" Grid.Column="1" Foreground="GreenYellow"/>
 
         <!-- Label pour afficher le pourcentage de progression -->
         <TextBlock x:Name="progressText" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="601,751,0,0" Grid.Column="1" RenderTransformOrigin="1.355,0.548" />
