--- a/Vousse.WPF/MainWindow.xaml
+++ b/Vousse.WPF/MainWindow.xaml
@@ -36,6 +36,15 @@
 
                 </StackPanel>
             </TabItem>
+
+            <TabItem Header="Chevauchements">
+                <StackPanel>
+                    <DataGrid x:Name="ChevauchementsDataGrid" AutoGenerateColumns="True" Height="450" Margin="10" />
+                    <!-- Bouton pour vérifier les chevauchements -->
+                    <Button Content="Vérifier les chevauchements" Margin="10" Height="30" Click="CheckChevauchements"/>
+                    <TextBlock Name="reponseChevauchements" TextWrapping="Wrap" Height="71" Width="673"/>
+                </StackPanel>
+            </TabItem>
         </TabControl>
         <!-- ProgressBar pour afficher la progression de l'importation -->
         <ProgressBar x:Name="progressBar" Margin="234,749,469,93" IsIndeterminate="True" Grid.Column="1" Foreground="GreenYellow"/>
