--- a/Vousse.WPF/MainWindow.xaml
+++ b/Vousse.WPF/MainWindow.xaml
@@ -22,6 +22,8 @@
                     <!-- block reponse de l'importation de spectacle-->
                     <TextBlock Name="reponseSpectacle" TextWrapping="Wrap"  Height="71" Width="429"/>
 
+                    <ProgressBar x:Name="progressBarSpectacle" Height="34" Width="300" Foreground="Blue" Visibility="Collapsed"/>
+
 
                 </StackPanel>
             </TabItem>
@@ -34,8 +36,8 @@
                     <Button Content="Importer Billetterie CSV" Margin="10" Height="30" Click="ImportBilletterieCsv" />
                     <!-- block reponse de l'importation de billeterie-->
                     <TextBlock Name="reponseBilleterie"  TextWrapping="Wrap" Height="71" Width="673"/>
-                    <ProgressBar x:Name="progressBar" Minimum="0" Maximum="100" Height="100" Width="320"/>
-                    <TextBlock x:Name="progressLabel" Margin="10" />
+
+                    <ProgressBar x:Name="progressBarBillet" Height="34" Width="300" Foreground="Blue" Visibility="Collapsed"/>
 
                 </StackPanel>
             </TabItem>
@@ -49,7 +51,7 @@
                 </StackPanel>
             </TabItem>
         </TabControl>
-        
+
 
     </Grid>
 </Window>
